app/assets/stylesheets/application.scss
/* ... */
.center {
  text-align: center;
}

.left-margin {
  overflow: hidden;
  // margin-left: 5px;
//   max-width: 100%;
  width: 100%;
//   min-width: 100%;
}

@media only screen and (max-width: 460px) {
  .left-margin {
    text-align: center;
    background-color: #f8f9fa;
    // max-width: 100%;
    // width: 100%;
    // min-width: 100%;
  }
}

@media (max-width: 812px) and (orientation: landscape) {
  .left-margin {
    margin-left: 10px;
    background-color: #f8f9fa;
  }
}

// @media only screen and (max-width: 600px) {
//   .left-margin {
//     margin-left: 10px;
//   }
// }

.flash {
  display: inline-block;
  background: #f9f8ea;
}

.flash-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
}

.content {
  min-height: calc(100vh - 570px);
}


// Header styles

.header-container {
  position: relative;
}

.header-image {
  padding: 5px;
  border-radius: 10px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  min-width: 100%;
  height: 400px;
  object-fit: cover;
  opacity: 0.35;
}

.header-top-left {
  position: absolute;
  // padding-bottom: 100px;
  padding-bottom: 5%;
  top: 35%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  font-size: 65px;
  line-height: 65px;
  width: 95%;
  font-family: 'SnellRoundhand', cursive;
}

@media only screen and (max-width: 990px) {
  .header-top-left {
    top: 30%;
    line-height: 70px;
  }
  .header-image {
    height: 375px;
  }
}

@media only screen and (max-width: 460px) {
  .header-top-left {
    font-size: 60px;
    width: 90%;
    // word-wrap: wrap;
    // padding-bottom: 0px;
    top: 45%;
    // top: 55px;
    // width: 200px;
  }
  .header-image {
    max-width: 100%;
    min-width: 100%;
    width: 100%;
    height: 350px;
  }
}

@media (max-width: 812px) and (orientation: landscape) {
  .header-top-left {
    font-size: 50px;
    top: 60px;
    // word-wrap: wrap;
    // top: 55px;
  }
  .header-image {
    height: 200px;
    // min-width: 100%;
    // width: 100%;
  }
}

.authentication-text {
  display: inline-block;
}

.authentication-position {
  position: absolute;
  top: 15px;
  right: 10px;
}

@media only screen and (max-width: 990px) {
  .authentication-position {
    top: -40px;
  }
}

@media only screen and (max-width: 374px) {
  .authentication-text {
    font-size: smaller ;
  }
}

// Avatars

.avatar-tiny {
  width: 24px;
  height: 24px;
  padding: 1px;
  border-radius: 5px;
  object-fit: cover;
}

.avatar {
  width: 100px;
  height: 100px;
  padding: 1px;
  border-radius: 25px;
  object-fit: cover;
}

// non-card product images

.product-image {
  height: 100px;
  padding: 1px;
  border-radius: 10px;
  object-fit: cover;
}

@media only screen and (max-width: 460px) {
  .product-image {
    max-width: 100%;
    width: 100%;
  }
}

.product-image-tiny {
  width: 75px;
  height: 75px;
  padding: 1px;
  border-radius: 5px;
  object-fit: cover;
  margin-top: 10px;
}

// Footer Styles

// Navbar Styles

// @media only screen and (max-width: 480px) {
//   .hidden-xs-hover {
//     visibility: hidden;
//   }
// }

// Home Page Styles

.welcome-sub-header {
  text-align: center;
}


.welcome-sub-header > h4 {
  // font-size: 30px;
  color: rgba(37, 37, 37, 0.416);
}

// Product card

.products {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  // grid-template-columns: repeat(3, minmax(auto, 1fr));
  grid-gap: 10px;
  align-items: center;
  justify-content: center;
  justify-items: stretch;
  // min-width: 375px;
  // min-height: 415px;
  
  & > h3 {
    grid-column: 1 / -1;
  }
  
  // & > ul {
  //   list-style-type: none;
  // }
  
  // & > ul > li {
  //   font-family: 'SnellRoundhand';
  //   border: 1px solid #ccc;
  //   border-radius: .3rem;
  // }

}

.card {
  // position: relative;
  padding: 10px;
  min-width: 375px;
  height: 415px;
  background-color: white;
  padding: 0% 0% 0% 0%;
  padding-bottom: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #419234;
  text-align: center;
  overflow: hidden;
  justify-self: stretch;
  // min-width: none;
}

@media only screen and (max-width: 460px) {
  .card {
    max-width: 340px;
    // min-width: 100%;
    // width: 100%;
    // justify-self:center;
    justify-self: center;
  }
}

.card-image {
  display: block;
  padding: 1px;
  border-radius: 5px;
  min-width: 100%;
  height: 300px;
  object-fit: cover;
  justify-self: stretch;
}

.card-image-not-found {
  padding: 1px;
  max-width: 100%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 35px;
  justify-self: stretch;
}

.card-image-not-found-sm {
  width: 75px;
  height: 75px;
  padding: 1px;
  border-radius: 5px;
  object-fit: cover;
  margin-top: 10px;
}

.card-text-up {
  position: relative;
  margin-top: -18px;
  margin-bottom: -15px;
}

.card-text-up-most-rev { // May be eliminated
  position: relative;
  margin-top: -20px;
  margin-bottom: -4px;
}

// Product Card Show

.card-show {
  // padding: 10px;
  max-width: 800px;
  // max-width: 100%;
  // max-width: max-content;
  height: 600px;
  background-color: white;
  padding: 0% 0% 0% 0%;
  padding-bottom: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #419234;
  text-align: center;
  overflow: hidden;
}

.card-image-show {
  padding: 1px;
  border-radius: 5px;
  max-width: 100%;
  height: 100%;
  object-fit: cover;
}

@media only screen and (max-width: 460px) {
  .card-show {
    // width: 70%;
    height: 500px;
  }
  .card-image-show {
    overflow: hidden;
  }
}

.card-stars-up {
  margin-top: -10px;
  margin-bottom: 7px;
}

.card-show-up {
  position: relative;
  margin-top: -12px;
  // margin-bottom: -15px;
}

.card-show-flex {
  display: flex;
  justify-content: space-around;
}

.card-show-col1 {
  order: 1;
}

.card-show-col2 {
  order: 2;
}

.product-show-text-up {
  margin-top: -40px;
  margin-bottom: -15px;
}
/* ... */

